Added a batch file in the root of the repo that allows people to build and run the tests with a single command.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 /Dependencies/NUnit-2.6.4/TestResult.xml
 bin
 obj
+TestResult.xml
+/Tests/*.ncrunchsolution
+/Tests/*.user
+/Tests/*.ncrunchproject
+_NCrunch_Tests
